done with mongodb

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 DATABASE_URL="mongodb+srv://mahmoud292949:T6ZptwgVxkopkO4j@cluster0.2yybpvl.mongodb.net/test"
 
-NEXTAUTH_SECRET="NEXTAUTH_SECRET="
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
