--- a/.env
+++ b/.env
@@ -4,7 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+
 DATABASE_URL="mongodb+srv://mahmoud292949:T6ZptwgVxkopkO4j@cluster0.2yybpvl.mongodb.net/test"
 
 
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+
+GITHUB_ID=3239c5ed00f04ca294fc
+GITHUB_SECRET=18d7f7de87cb4fb281272411324a5f40e9cd7968
