--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
 GITHUB_ID=3239c5ed00f04ca294fc
 GITHUB_SECRET=18d7f7de87cb4fb281272411324a5f40e9cd7968
+
+GOOGLE_CLIENT_ID=1081897672006-kjdo3s2eqfcisfjaqv8dv5pn964fjv33.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
