--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@prisma/client": "^4.16.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-leaflet": "^3.0.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "leaflet": "^1.9.3",
+    "leaflet": "^1.9.4",
     "next": "^13.5.6",
     "next-auth": "^4.20.1",
     "next-cloudinary": "^4.0.1",
