--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "typeRoots": ["./node_modules/@types"], 
-    "types": ["leaflet"],
+    "types": ["leaflet", /* other types */],
     "target": "es5",
     "lib": [
       "dom",
@@ -27,9 +27,7 @@
     "paths": {
       "@/*": [
         "./*"
-      ],
-      "leaflet": ["node_modules/leaflet/dist/leaflet-src.js"],
-      "leaflet/dist/images/*": ["node_modules/leaflet/dist/images/*"]
+      ]
     },
     "forceConsistentCasingInFileNames": true
   },
