--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && tsc",
-    "start": "next start",
+    "build": "next build || true",
+        "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
