--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "typeRoots": ["./node_modules/@types"], 
-    "types": ["leaflet",],
+    "types": ["leaflet", /* other types */],
     "target": "es5",
     "lib": [
       "dom",
