--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/leaflet": "^1.9.8",
+    "@types/react-leaflet": "^1.9.8",
     "@types/node": "20.10.5",
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
