--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && tsc",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^4.11.0",
+    "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
@@ -18,8 +19,8 @@
     "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "leaflet": "^1.9.4",
-    "next": "^14.0.4",
+    "leaflet": "^1.9.3",
+    "next": "13.2.4",
     "next-auth": "^4.20.1",
     "next-cloudinary": "^4.0.1",
     "next-superjson-plugin": "^0.5.6",
@@ -34,18 +35,17 @@
     "react-select": "^5.7.2",
     "react-spinners": "^0.13.8",
     "swr": "^2.1.1",
-    "world-countries": "^5.0.0",
+    "typescript": "5.0.2",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/leaflet": "^1.9.8",
-    "@types/node": "20.10.5",
+    "@types/leaflet": "^1.9.3",
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "prisma": "^4.16.2",
-    "tailwindcss": "^3.2.7",
-    "typescript": "5.3.3"
+    "prisma": "^4.11.0",
+    "tailwindcss": "^3.2.7"
   }
 }
